==> iocafe/eosal/extensions/serial/esp32/osal_esp32_serial.c <==
#include "eosalx.h"
#include "driver/uart.h"
#define OSAL_NRO_ESP32_UARTS UART_NUM_MAX

osalStream osal_serial_open(
    const os_char *parameters,
    void *option,
    osalStatus *status,
    os_int flags)
{
    osalSerial *myserial = OS_NULL;
    uart_config_t uart_config;
    uart_port_t uart_nr;
    int rxbuf_sz, txbuf_sz;
    int rx_pin, tx_pin, rts_pin, cts_pin;
    const os_char *v;

    os_memclear(&uart_config, sizeof(uart_config));
    uart_config.data_bits = UART_DATA_8_BITS;
    uart_config.stop_bits = UART_STOP_BITS_1;

    /* Get zero based port number and move parameters behind port name.
     */
    uart_nr = osal_get_esp32_uart_nr(&parameters);

    /* Baud rate.
     */
    uart_config.baud_rate = osal_str_get_item_int(parameters,
        "baud", 115200, OSAL_STRING_DEFAULT);

    /* Flow control.
     */
    uart_config.flow_ctrl = UART_HW_FLOWCTRL_DISABLE;
    /* uart_config.flow_ctrl = UART_HW_FLOWCTRL_CTS_RTS;
    uart_config.rx_flow_ctrl_thresh = 122; */

    /* Parity.
     */
    v = osal_str_get_item_value(parameters, "parity", OS_NULL, OSAL_STRING_DEFAULT);
    uart_config.parity = UART_PARITY_DISABLE;
    if (!os_strnicmp(v, "even", 4))
    {
        uart_config.parity = UART_PARITY_EVEN;
    }
    else if (!os_strnicmp(v, "odd", 3))
    {
        uart_config.parity = UART_PARITY_ODD;
    }

    /* Allocate and clear serial structure.
     */
    myserial = serialport + uart_nr;
    os_memclear((os_char*)myserial, sizeof(osalSerial));
    myserial->hdr.iface = OSAL_SERIAL_IFACE;
    myserial->open_flags = flags;

    /* Configure UART parameters.
     */
    ESP_ERROR_CHECK(uart_param_config(uart_nr, &uart_config));

    // ESP_ERROR_CHECK(uart_set_mode(uart_nr, UART_MODE_RS485_HALF_DUPLEX));

    /* Set UART pins. If unspecified, ESP32 defaults are used.
     */
    rx_pin = osal_str_get_item_int(parameters, "rxpin", UART_PIN_NO_CHANGE, OSAL_STRING_DEFAULT);
    tx_pin = osal_str_get_item_int(parameters, "txpin", UART_PIN_NO_CHANGE, OSAL_STRING_DEFAULT);
    rts_pin = osal_str_get_item_int(parameters, "rtspin", UART_PIN_NO_CHANGE, OSAL_STRING_DEFAULT);
    cts_pin = osal_str_get_item_int(parameters, "ctspin", UART_PIN_NO_CHANGE, OSAL_STRING_DEFAULT);
    uart_set_pin(uart_nr, tx_pin, rx_pin, rts_pin, cts_pin);

    /* Setup UART buffered IO with event queue.
     */
    rxbuf_sz = osal_str_get_item_int(parameters, "rxbuf", 256, OSAL_STRING_DEFAULT);
    txbuf_sz = osal_str_get_item_int(parameters, "txbuf", 256, OSAL_STRING_DEFAULT);
    if (rxbuf_sz < UART_FIFO_LEN + 16) rxbuf_sz = UART_FIFO_LEN + 16;
    if (txbuf_sz < UART_FIFO_LEN + 16) txbuf_sz = UART_FIFO_LEN + 16;
txbuf_sz = 0; // MUST BE ZERO, OTHERWISE BLOCKS
    ESP_ERROR_CHECK(uart_driver_install(uart_nr, rxbuf_sz, txbuf_sz,
        0, NULL, 0));
        //10, &myserial->uart_queue, 0));

    /* Configure the serial port.
     */
//     myserial->serial->begin(baudrate, port_config);

    /* Success set status code and cast serial structure pointer to stream pointer and return it.
     */
    if (status) *status = OSAL_SUCCESS;
    return (osalStream)myserial;
}

void osal_serial_close(
    osalStream stream,
    os_int flags)
{
    uart_port_t uart_nr;

    /* Get UART number, If called with NULL argument, do nothing.
     */
    if (stream == OS_NULL) return;
    uart_nr = (osalSerial*)stream - serialport;

#if IDF_VERSION_MAJOR >= 4
    /* esp-idf version 4
     */
    if (uart_is_driver_installed(uart_nr))
    {
        uart_driver_delete(uart_nr);
    }
#else
    uart_driver_delete(uart_nr);
#endif
}

osalStatus osal_serial_write(
    osalStream stream,
    const os_char *buf,
    os_memsz n,
    os_memsz *n_written,
    os_int flags)
{
    uart_port_t uart_nr;
    int nwr;

    /* Get UART number, If called with NULL argument, do nothing.
     */
    if (stream == OS_NULL) {
        *n_written = 0;
        return OSAL_STATUS_FAILED;
    }
    uart_nr = (osalSerial*)stream - serialport;

    nwr = uart_tx_chars(uart_nr, buf, n);

    if (nwr < 0)
    {
        *n_written = 0;
        return OSAL_STATUS_FAILED;
    }

    /* Return number of bytes written.
     */
    *n_written = nwr;
    osal_resource_monitor_update(OSAL_RMON_TX_SERIAL, nwr);
    return OSAL_SUCCESS;
}
