==> iocafe/eosal/extensions/serial/metal/osal_serial.c <==
#define OSAL_INCLUDE_METAL_HEADERS
#include "eosalx.h"
#define USE_FULL_LL_DRIVER
#include "stm32l4xx_ll_bus.h"
#include "stm32l4xx_ll_rcc.h"
#include "stm32l4xx_ll_gpio.h"
#include "stm32l4xx_ll_usart.h"
#include "stm32f4xx_ll_bus.h"
#include "stm32f4xx_ll_rcc.h"
#include "stm32f4xx_ll_gpio.h"
#include "stm32f4xx_ll_usart.h"

osalStream osal_serial_open(
    const os_char *parameters,
    void *option,
    osalStatus *status,
    os_int flags)
{
    LL_USART_InitTypeDef
        initstruc;

    osalStaticUARTConfig
        *uart;

    osalSerial
        *myserial;

    const os_char
        *v;

    int
        port_nr,
        i;

    /* Clear parameter structure.
     */
    os_memclear(&initstruc, sizeof(initstruc));

    /* Decide on UART configuration structure and serial port structure.
     */
    port_nr = osal_get_metal_serial_port_nr(&parameters);
    for (i = 0; osal_uart[i].com_port_nr != port_nr; i++)
    {
        if (i >= OSAL_NRO_UARTS - 1)
        {
            /* No UART matches to port number.
             */
            if (status) *status = OSAL_SUCCESS;
            return OS_NULL;
        }
    }
    uart = osal_uart + i;
    myserial = uart->serial;
    if (myserial == OS_NULL)
    {
        for (i = 0; osal_serial_port[i].uart; i++)
        {
            if (i >= OSAL_MAX_OPEN_SERIAL_PORTS - 1)
            {
                /* No free serial port structures.
                 */
                if (status) *status = OSAL_SUCCESS;
                return OS_NULL;

            }
        }
        myserial = osal_serial_port + i;
    }
    myserial->uart = uart;
    myserial->hdr.iface = OSAL_SERIAL_IFACE;
    myserial->open_flags = flags;
    uart->serial = myserial;

    /* Parse baud rate "bps". Default to 115200.
     */
    initstruc.BaudRate = osal_str_get_item_int(parameters, "baud",
        115200, OSAL_STRING_DEFAULT);

    /* Number of bits in byte is always 8.
     */
    initstruc.DataWidth = LL_USART_DATAWIDTH_8B;

    /* Get parity check option: "none", "odd" or "even". Defaults to "none".
     */
    v = osal_str_get_item_value(parameters, "parity", OS_NULL, OSAL_STRING_DEFAULT);
    initstruc.Parity = LL_USART_PARITY_NONE;
    if (!os_strnicmp(v, "even", 4))
    {
        initstruc.Parity = LL_USART_PARITY_EVEN;
    }
    if (!os_strnicmp(v, "odd", 3))
    {
        initstruc.Parity = LL_USART_PARITY_ODD;
    }

    /* One stop bit.
     */
    initstruc.StopBits = LL_USART_STOPBITS_1;

    /* Set up the rest.
     */
    initstruc.TransferDirection   = LL_USART_DIRECTION_TX_RX;
    initstruc.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    initstruc.OverSampling        = LL_USART_OVERSAMPLING_16;

    /* Enable the peripheral clock of GPIO Port.
     */
    uart->gpio_clk_enable();

    /* Configure Tx Pin as : Alternate function, High Speed, Push pull, Pull up.
     */
    LL_GPIO_SetPinMode(uart->tx_gpio_port, uart->tx_pin, LL_GPIO_MODE_ALTERNATE);
    uart->set_tx_gpio_af();
    LL_GPIO_SetPinSpeed(uart->tx_gpio_port, uart->tx_pin, LL_GPIO_SPEED_FREQ_HIGH);
    LL_GPIO_SetPinOutputType(uart->tx_gpio_port, uart->tx_pin, LL_GPIO_OUTPUT_PUSHPULL);
    LL_GPIO_SetPinPull(uart->tx_gpio_port, uart->tx_pin, LL_GPIO_PULL_UP);

    /* Configure Rx Pin as : Alternate function, High Speed, Push pull, Pull up.
     */
    LL_GPIO_SetPinMode(uart->rx_gpio_port, uart->rx_pin, LL_GPIO_MODE_ALTERNATE);
    uart->set_rx_gpio_af();
    LL_GPIO_SetPinSpeed(uart->rx_gpio_port, uart->rx_pin, LL_GPIO_SPEED_FREQ_HIGH);
    LL_GPIO_SetPinOutputType(uart->rx_gpio_port, uart->rx_pin, LL_GPIO_OUTPUT_PUSHPULL);
    LL_GPIO_SetPinPull(uart->rx_gpio_port, uart->rx_pin, LL_GPIO_PULL_UP);

    /* Transmitter control pin configuration
     */
    LL_GPIO_SetPinMode(uart->tx_ctrl_gpio_port, uart->tx_ctrl_pin, LL_GPIO_MODE_OUTPUT);

    /* Set serial interrupt priority and enable the interrupt.
     */
    NVIC_SetPriority(uart->irq, 0);
    NVIC_EnableIRQ(uart->irq);

    /* Enable USART clock and clock source.
     */
    uart->clk_enable();
    uart->clk_source();

    /* Setup empty ring buffers
     */
    myserial->txend = myserial->txbuf + OSAL_SERIAL_RING_BUF_SZ;
    myserial->rxend = myserial->rxbuf + OSAL_SERIAL_RING_BUF_SZ;
    myserial->txhead = myserial->txtail = myserial->txbuf;
    myserial->rxhead = myserial->rxtail = myserial->rxbuf;
    myserial->sendflag = OS_FALSE;

    /* Disable transmitter.
     */
#ifndef STM32F429xx
    HAL_GPIO_WritePin(uart->tx_ctrl_gpio_port, uart->tx_ctrl_pin, GPIO_PIN_RESET);
#endif

    /* Initialize UART using the initialization structure.
     */
    LL_USART_Init(uart->instance, &initstruc);

    /* Enable the UART and wait for initialisation.
     */
    LL_USART_Enable(uart->instance);
    while((!(LL_USART_IsActiveFlag_TEACK(uart->instance))) ||
          (!(LL_USART_IsActiveFlag_REACK(uart->instance))))
    {
    }

    /* Enable RXNE interrupt.
     */
    LL_USART_EnableIT_RXNE(uart->instance);

    /* Success.
     */
    if (status) *status = OSAL_SUCCESS;
    return (osalStream)myserial;
}

void osal_serial_close(
    osalStream stream,
    os_int flags)
{
    osalStaticUARTConfig *uart;
    osalSerial *myserial;

    if (stream)
    {
        myserial =  (osalSerial*)stream;
        uart = myserial->uart;

        LL_USART_DisableIT_RXNE(uart->instance);
        LL_USART_DisableIT_TXE(uart->instance);
        LL_USART_DisableIT_TC(uart->instance);
        LL_USART_Disable(uart->instance);

        uart->serial = OS_NULL;
        myserial->uart = OS_NULL;
    }
}

osalStatus osal_serial_write(
    osalStream stream,
    const os_char *buf,
    os_memsz n,
    os_memsz *n_written,
    os_int flags)
{
    volatile os_uchar *next, *tail;
    __IO os_uchar c;
    os_uchar *end;
    int bytes;
    osalSerial *myserial;
    osalStaticUARTConfig *uart;

    /* It is error to write to closed stream.
     */
    if (stream == OS_NULL)
    {
        *n_written = 0;
        return OSAL_STATUS_FAILED;
    }

    myserial = (osalSerial*)stream;
    uart = myserial->uart;

    /* Write to the ring buffer.
     */
    bytes = 0;
    end = myserial->txend;
    tail = myserial->txtail;
    while (n > 0)
    {
        next = myserial->txhead + 1;
        if (next == end) next = myserial->txbuf;
        if (next == tail)
        {
            /* Ring buffer overflow.
             */
            break;
        }

        *myserial->txhead = *(buf++);
        myserial->txhead = next;
        n--;
        bytes++;
    }

    /* Start transfer only if not already running.
     */
    if (!myserial->sendflag && myserial->txhead != tail)
    {
        /* Enable transmitter.
         */
#ifndef STM32F429xx
        HAL_GPIO_WritePin(uart->tx_ctrl_gpio_port, uart->tx_ctrl_pin, GPIO_PIN_SET);
#endif

        /* Fill TDR with a new char.
         */
        c = *tail;
        if (++tail == end) tail = myserial->txbuf;
        myserial->txtail = tail;
        myserial->sendflag = OS_TRUE;

        /* Start USART transmission : Will initiate TXE interrupt after
           TDR register is empty.
         */
        LL_USART_TransmitData8(uart->instance, c);

        /* Enable TXE interrupt.
         */
        LL_USART_EnableIT_TXE(uart->instance);
    }

    *n_written = bytes;
    osal_resource_monitor_update(OSAL_RMON_TX_SERIAL, bytes);
    return OSAL_SUCCESS;
}
